# chihuahua-os-core

./: .gitignore  config_meson_all.sh  gcc_args.ini  host_config.ini  master_setup.py  x86_64-elf.ini
bootloader/: config_meson.sh  meson.build  x86_64-unknown-uefi.ini
bootloader/c-efi/: example-hello-world.c  test-native.c  x86_64-unknown-uefi.mesoncross.ini
bootloader/include/: boot_params.h
bootloader/src/: README.md  gop.cpp  gop.h  main.c  main.cpp  main.h  meson.build
bootloader/src/chihuahua_essentials/: include  src
bootloader/src/elf/: include  src
bootloader/src/loader/: kernel_reader.c  kernel_reader.cpp  kernel_reader.h  memory_mapper.cpp  memory_mapper.h  meson.build
bootloader/src/paginator/: include  src
bootloader/src/tiny_libc/: cstring.cpp  cstring.h  meson.build
bootloader/src/utils/: meson.build  string_utils.cpp  string_utils.h
bootloader/subprojects/chihuahua_essentials/: README.md  meson.build
bootloader/subprojects/chihuahua_essentials/src/: meson.build
bootloader/subprojects/chihuahua_essentials/src/string/: memcmp.c  memmove.c
include/chihuahua_essentials/: cstring.h  string.h
kernel/: config_meson.sh  meson.build
kernel/src/: main.cpp  meson.build  runtime_cpp_support.cpp
kernel/src/arch/x86_64/: boot.S  linker.ld  meson.build
run/: README.md  create_img_file.sh  mount.sh  run_qemu.sh  umount.sh
static_libs/: config_meson.sh
static_libs/c_husky/: meson.build
static_libs/c_husky/include/: cstring.h  string.h
static_libs/c_husky/src/: meson.build
static_libs/c_husky/src/string/: memcmp.cpp  memcpy.cpp  memmove.cpp  memset.cpp  meson.build  strcat.cpp  strcpy.cpp  strlen.cpp  strncat.cpp  strncpy.cpp
static_libs/chihuahua_essentials/: config_meson.sh  meson.build
static_libs/chihuahua_essentials/include/: cstring.h  meson.build  string.h
static_libs/chihuahua_essentials/include/chihuahua_essentials/: binary_utils.h  mem_essentials.h  meson.build  option.h  result.h
static_libs/chihuahua_essentials/src/: mem_essentials.cpp  meson.build  option.cpp  result.cpp
static_libs/chihuahua_essentials/src/string/: memcmp.cpp  memcpy.c  memcpy.cpp  memmove.cpp  memset.c  memset.cpp  meson.build
static_libs/elf/: meson.build
static_libs/elf/include/elf/: elf_definitions.h  elf_loader.h  meson.build
static_libs/elf/src/: elf_definitions.h  elf_loader.cpp  library.cpp  library.h  meson.build
static_libs/elf/subprojects/: chihuahua_essentials
static_libs/interrupt_manager/: meson.build
static_libs/interrupt_manager/include/interrupt_manager/: main_manager.h
static_libs/interrupt_manager/src/: meson.build
static_libs/interrupt_manager/src/arch/x86_64/: gdt.asm  gdt.cpp  gdt.h  idt.cpp  idt.h  main_manager.cpp  meson.build  tss.h
static_libs/paginator/: meson.build
static_libs/paginator/include/paginator/: page_table.h  paging_controller.h
static_libs/paginator/src/: library.h  meson.build  page_table.cpp
static_libs/paginator/src/arch/: meson.build
static_libs/paginator/src/arch/x86_64/: meson.build  x86_64_paging_controller.cpp  x86_64_paging_controller.h
static_libs/paginator/subprojects/: chihuahua_essentials
